Add parallax to hero section

--- a/src/styles/modules/_hero.sass
+++ b/src/styles/modules/_hero.sass
@@ -1,6 +1,6 @@
 .hero
   background-color: #303930
-  background-image: linear-gradient(to top, rgba(black, .2), rgba(white, .2));
+  background-image: linear-gradient(to top, rgba(black, .2), rgba(white, .2))
   //#333d3d
   color: #fff
   height: 100vh
