Add about section

--- a/src/styles/_shame.sass
+++ b/src/styles/_shame.sass
@@ -1,1 +1,18 @@
 //
+section
+  padding-bottom: 2rem
+  padding-top: 2rem
+
+.section-title
+  color: rgba(black, .5)
+  font-size: 2rem
+  font-weight: 300
+  line-height: 1.25
+  margin-bottom: 1rem
+  margin-top: 0
+  text-align: center
+
+  span
+    color: black
+    font-weight: 700
+
