--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,5 +1,7 @@
 @import 'base/variables'
 @import 'base/global'
+@import 'modules/grid'
 @import 'modules/hero'
+@import 'modules/about'
 @import 'modules/animations'
 @import 'shame'
