Add contributions section

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -3,5 +3,7 @@
 @import 'modules/grid'
 @import 'modules/hero'
 @import 'modules/about'
+@import 'modules/contributions'
 @import 'modules/animations'
+@import 'modules/rotator'
 @import 'shame'
