--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,5 +5,6 @@ block content
   include partials/_site-header.pug
   include partials/_hero.pug
   include partials/_about.pug
+  include partials/_contributions.pug
   include partials/_timeline.pug
   include partials/_site-footer.pug
