--- a/src/styles/_shame.sass
+++ b/src/styles/_shame.sass
@@ -1,4 +1,3 @@
-//
 section
   padding-bottom: 2rem
   padding-top: 2rem
@@ -15,4 +14,10 @@ section
   span
     color: black
     font-weight: 700
+
+  &--dark
+    color: rgba(white, .75)
+
+    span
+      color: #fff
 
