--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,10 +1,13 @@
 extends _layout.pug
 block title
-  title FCC Tribute Page
+  title John von Neumann - FCC Tribute Page
+block meta
+  meta(name='description', content='Check out my freeCodeCamp tribute page dedicated to John von Neumann, one of the most important names in the history of computing')
 block content
   include partials/_site-header.pug
   include partials/_hero.pug
   include partials/_about.pug
   include partials/_contributions.pug
+  include partials/_merge-sort.pug
   include partials/_timeline.pug
   include partials/_site-footer.pug
