--- a/src/styles/_shame.sass
+++ b/src/styles/_shame.sass
@@ -21,3 +21,15 @@ section
     span
       color: #fff
 
+.text-center
+  text-align: center
+
+.cta
+  background-color: #fff
+  border: 1px solid rgba(black, .5)
+  border-radius: 2px
+  color: $text-color
+  display: inline-block
+  margin: 1rem 0 0
+  padding: .5rem 1rem
+  text-transform: uppercase
