Add footer section

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -4,6 +4,7 @@
 @import 'modules/hero'
 @import 'modules/about'
 @import 'modules/contributions'
+@import 'modules/footer'
 @import 'modules/animations'
 @import 'modules/rotator'
 @import 'shame'
