Add icon to external links

--- a/src/pug/partials/_about.pug
+++ b/src/pug/partials/_about.pug
@@ -5,7 +5,7 @@ section.about
       .col.col--half
         p He was a pioneer of the application of operator theory to quantum mechanics, in the development of functional analysis, and a key figure in the development of game theory and the concepts of cellular automata, the universal constructor and the digital computer. 
         
-        p During World War II he worked on the #[a(href='https://en.wikipedia.org/wiki/Manhattan_Project', target='_blank', rel='noreferrer noopener') Manhattan Project], developing the mathematical models behind the explosive lenses used in the implosion-type nuclear weapon. After the war, he served on the General Advisory Committee of the United States Atomic Energy Commission, and later as one of its commissioners. 
+        p During World War II he worked on the #[a(href='https://en.wikipedia.org/wiki/Manhattan_Project', target='_blank', rel='external noreferrer noopener') Manhattan Project], developing the mathematical models behind the explosive lenses used in the implosion-type nuclear weapon. After the war, he served on the General Advisory Committee of the United States Atomic Energy Commission, and later as one of its commissioners. 
         
         p Along with theoretical physicist Edward Teller, mathematician Stanislaw Ulam, and others, he worked out key steps in the nuclear physics involved in thermonuclear reactions and the hydrogen bomb.
         
@@ -14,5 +14,5 @@ section.about
         
         p His analysis of the structure of self-replication preceded the discovery of the structure of #[abbr(title='Deoxyribonucleic Acid') DNA]. Von Neumann's team performed the world's first numerical weather forecasts on the #[abbr(title='Electronic Numerical Integrator and Computer') ENIAC] computer.
         
-        p He published over 150 papers in his life: about 60 in pure mathematics, 20 in physics, and 60 in applied mathematics, the remainder being on special mathematical subjects or non-mathematical ones. His last work, an unfinished manuscript written while in the hospital, was later published in book form as #[a(href='https://en.wikipedia.org/wiki/The_Computer_and_the_Brain', target='_blank', rel='nofollow noreferrer noopener') The Computer and the Brain].
+        p He published over 150 papers in his life: about 60 in pure mathematics, 20 in physics, and 60 in applied mathematics, the remainder being on special mathematical subjects or non-mathematical ones. His last work, an unfinished manuscript written while in the hospital, was later published in book form as #[a(href='https://en.wikipedia.org/wiki/The_Computer_and_the_Brain', target='_blank', rel='external noreferrer noopener') The Computer and the Brain].
         
