--- a/src/styles/base/_variables.sass
+++ b/src/styles/base/_variables.sass
@@ -1,6 +1,7 @@
 $background-color: #fafafa
-$link-color: #0277bb
+$link-color: #009688
 $text-color: rgba(black, .75)
+$brand-color: #004d40
 
 $font-stack-sans: Roboto, 'Helvetica Neue', 'Segoe UI', Arial, sans-serif
 $font-size: 100%
