--- a/src/styles/modules/_contributions.sass
+++ b/src/styles/modules/_contributions.sass
@@ -1,6 +1,6 @@
 .contributions
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
-  background-color: #222
+  background-color: $brand-color
   color: #fff
   text-align: center
