--- a/src/styles/modules/_hero.sass
+++ b/src/styles/modules/_hero.sass
@@ -1,5 +1,5 @@
 .hero
-  background-color: #303930
+  background-color: $brand-color
   background-image: linear-gradient(to top, rgba(black, .2), rgba(white, .2))
   //#333d3d
   color: #fff
@@ -20,6 +20,7 @@
   &__image
     border-radius: 50%
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25)
+    filter: sepia(50%) hue-rotate(100deg)
     height: 128px
     margin-bottom: 1rem
     overflow: hidden
